Added new articles.

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -25,10 +25,10 @@
       </a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li><a href="/2013/05/26/unqlite-intro/index.html"><i class="icon-th-large"></i>关于</a></li>
-          <li><a href="http://unqlite.org/features.html"><i class="icon-plus-sign"></i>特色</a></li>
-          <li><a href="/2013/05/26/c-programming-guide/index.html"><i class="icon-pencil icon-blank"></i>玩转UnQLite</a></li>
-          <li><a href="http://unqlite.org/c_api.html"><i class="icon-star icon-blank"></i>文档</a></li>
+          <li><a href="/2013/05/26/about/index.html"><i class="icon-th-large"></i>关于</a></li>
+          <li><a href="/2013/06/01/features/index.html"><i class="icon-plus-sign"></i>特色</a></li>
+          <li><a href="/2013/05/26/intro/index.html"><i class="icon-pencil icon-blank"></i>玩转UnQLite</a></li>
+          <li><a href="/2013/06/02/c_api/index.html"><i class="icon-star icon-blank"></i>文档</a></li>
           <li><a href="http://unqlite.org/downloads.html"><i class="icon-download icon-blank"></i>下载</a></li>
           <li><a href="/license"><i class="icon-fire icon-blank"></i>许可证</a></li>
           <li><a href="http://unqlite.org/faq.html"><i class="icon-share icon-blank"></i>FAQ</a></li>
