Added new articles.

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -52,7 +52,7 @@
   <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>, 
   <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> and 
   <a href="http://www.github.com/guiquanz/">GitHub</a> 
-| Theme by <a href="/">GuiQuanZ</a> 
+| Theme by <a href="http://guiquanz.github.io/">GuiQuanZ</a> 
 | <span class="label label-success">{{site.time | date:"%Y-%m-%d %H:%M:%S"}}</span>
   </small></p>
 </div>
